solve issue with navbar collapsing

--- a/css/styles.css
+++ b/css/styles.css
@@ -3823,7 +3823,7 @@ textarea.form-control-lg {
 }
 
 .navbar {
-  min-width: 250px;
+  min-width: 500px;
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
   
